<resources>
    <string name="app_name">Hire Tutor Nepal(Tutee)</string>
    <string-array name="Spinner_Items">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="Email">Email</string>
    <string name="STitle1">Fill The Requirements</string>
    <string name="STitle2">Advance Payment</string>
    <string name="STitle3">Schedule Demo Class</string>
    <string name="STitle4">Start Learning</string>
    <string name="first_screen_message">Fill all the home tution requirements,so that we can find "The Perfect Tutor"</string>
    <string name="second_screen_message">Continue by paying the advance fees</string>
    <string name="third_screen_message">Review the teacher and schedule a demo class</string>
    <string name="fourth_screen_message">If you love the teacher start learning,but if you dont we will reassign the teacher</string>
    <string name="my_preference">"com.abc.com.MyPref"</string>
    <string name="my_preference_key">"com.abc.com.MyPrefKey"</string>
    <string name="Password">"Password"</string>
    <string name="ResetPassword">"Reset Password"</string>
    <string name="CPassword">"Confirm Password"</string>
    <string name="ForgtPass">"Forgot Password...?"</string>
    <string name="Remember_Me">"Remember Me"</string>
    <string name="Register">"Register"</string>
    <string name="Login">"Login"</string>
    <string name="Next">"Next"</string>
    <string name="Age">"Age"</string>
    <string name="Phone">"Phone"</string>
    <string name="Gender">"Gender"</string>
    <string name="Male">"Male"</string>
    <string name="Female">"Female"</string>
    <string name="Name">"Name"</string>
    <string name="logout">"Logout"</string>
    <string name="default_notification_channel_id">myNotification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
