<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/onboarding_bg"
        android:orientation="vertical"
        >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Namelayout"
        android:layout_marginTop="40dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/WelcomeErrorAppearance"
        >
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:backgroundTint="@color/white"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="16sp"
            />


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Emaillayout"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/WelcomeErrorAppearance"
        >
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:backgroundTint="@color/white"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Phonelayout"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/WelcomeErrorAppearance"

        >
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone"
            android:backgroundTint="@color/white"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Agelayout"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:hintEnabled="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/WelcomeErrorAppearance"
        >
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Age"
            android:backgroundTint="@color/white"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:maxLength="2"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:spinnerMode="dialog"
        android:popupTheme="@style/popupstyle"
        >


    </android.support.v7.widget.AppCompatSpinner>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Passlayout"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:errorTextAppearance="@style/WelcomeErrorAppearance"
        >
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/CPasslayout"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:errorTextAppearance="@style/WelcomeErrorAppearance"

        >
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/Cpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CPassword"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/Regbtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        android:text="@string/Register"
        android:background="@color/Button"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"
        />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Backbtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="16sp"
            android:text="@string/Login"
            android:background="@color/Button"
            android:textColor="@color/white"
            android:layout_marginBottom="40dp"
            android:textAllCaps="false"
            />





    </LinearLayout>
</ScrollView>