<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".EditProfile">
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/onboarding_bg">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user"
                />
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
        android:id="@+id/Namelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="24dp"
        android:textColorHint="@android:color/black"
        app:errorEnabled="true"
        app:hintEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:drawablePadding="10dp"
            android:hint="@string/Name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />


    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Emaillayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textColorHint="@android:color/black"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:drawablePadding="10dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black" />


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/phonelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textColorHint="@android:color/black"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:drawablePadding="10dp"
                android:hint="@string/Phone"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="10"
                android:textColor="@android:color/black" />


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
        android:id="@+id/agelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColorHint="@android:color/black"
        app:errorEnabled="true"
        app:hintEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:drawablePadding="10dp"
            android:hint="@string/Age"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="2"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/genderlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textColorHint="@android:color/black"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:drawablePadding="10dp"
                android:hint="@string/Gender"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="6"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_marginBottom="50dp"
            android:id="@+id/updatebtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="@color/Button"
            android:text="Update"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>

</ScrollView>